@@ -1,3 +1,8 @@
+2013-09-03  Jeremy Bennett <jeremy.bennett@embecosm.com>
+
+	* build-all.sh: Only check for Linux directory with if uClibc is
+	being built.
+
 2013-08-29  Vineet Gupta <vgupta@synopsys.com>
 
 	* arc-versions.sh: Update uClibc branch name to new naming convention.
